# Laura-openclaw

./: .gitignore  .neon  .oxlintrc.json  AGENTS.md  GEMINI.md  fix-pairing.js  fix_auth.js  package-lock.json  package.json  update-check.json
.claude/: CLAUDE.md  settings.json  tsconfig.json  (+1 more)
universal-data-system/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
universal-data-system/docker/nginx/: Dockerfile  default.conf
universal-data-system/docker/postgres/: Dockerfile  init.sql
universal-data-system/scripts/: bootstrap_index.py  healthcheck.sh  inject_account.py  migrate.py  run_worker.py  setup_oauth.py
universal-data-system/src/: __init__.py  config.py  main.py
universal-data-system/src/api/: __init__.py  deps.py
universal-data-system/src/api/routes/: __init__.py  context.py  health.py  ontology.py  search.py  sync.py  webhook.py
universal-data-system/src/db/: __init__.py  models.py  session.py
universal-data-system/src/db/migrations/: 001_init.sql  002_hybrid_search.sql  003_ontology.sql
universal-data-system/src/services/: __init__.py  chunking.py  embeddings.py  ontology.py  search.py  tavily.py
universal-data-system/src/services/asaas/: __init__.py  client.py  sync.py
universal-data-system/src/services/drive/: __init__.py  auth.py  export.py  sync.py  watch.py
universal-data-system/src/services/extraction/: __init__.py  docx.py  google.py  pdf.py  pptx.py
universal-data-system/src/services/kiwify/: __init__.py  client.py  sync.py
universal-data-system/src/services/notion/: __init__.py  sync.py
universal-data-system/src/utils/: __init__.py  hash.py  logging.py
universal-data-system/src/workers/: __init__.py  settings.py  tasks.py
(+3089 files in other folders)
