[project]
name = "universal-data-system"
version = "0.1.0"
description = "Near-real-time searchable knowledge base from Google Drive with hybrid BM25+vector search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "alembic>=1.14.0",

    # Task Queue
    "arq>=0.26.1",
    "redis>=5.2.0",

    # Google Drive
    "google-api-python-client>=2.154.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",

    # Content extraction (NO LlamaParse - use local libs)
    "pymupdf4llm>=0.0.17",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.2",  # For Excel files

    # Embeddings (Gemini, NOT OpenAI)
    "google-generativeai>=0.8.0",
    "tiktoken>=0.8.0",

    # Utilities
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
